# TIL

./: README.md
Deep_Learning_from_Scratch/: Chapter_03.py  Chapter_04.py  Chapter_05.py  Chpater_02.py  functions.py  gradient.py  mnist.py
Feature_Engineering/: Chapter02_Fancy_Tricks_with_Simple_Numbers.ipynb  Chapter03_Text_Data.ipynb  README.md
Pipeline/: Untitled.ipynb
async-python/: README.md
async_python/: pyproject.toml
async_python/async_python/: test.py
async_python/async_python/coroutine_asyncfunc/: async.py  basic_fetcher.py  coroutine_fetcher.py  sync.py
async_python/async_python/multi_thread_process/: cpu_basic.py  cpu_multi_processing.py  io_basic.py  io_coroutine.py  io_multi_threading.py
async_python/async_python/scraping/: scraping_01.py  scraping_02.py  scraping_03.py  scraping_test.py  secrets.json
async_python/tests/: test_async_python.py
clean_code/: 01.introduction,formatting.ipynb  02.PythonicCode.ipynb  03.The_Effects_of_Feature_Scaling.ipynb  README.md
module/: README.MD  metric_module.py
