[tool.poetry]
name = "async_python"
version = "0.1.0"
description = ""
authors = ["jajinmori <jajinmori1@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "5.2"
black = "^22.6.0"
flake8 = "^4.0.1"
requests = "^2.28.1"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
